<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipe_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white_primary">

    <android.support.v7.widget.Toolbar
        android:id="@+id/recipe_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppToolbar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:layout_marginTop="?attr/actionBarSize"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_empty_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        tools:text="no internet"/>

</FrameLayout>