<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_single_step"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SingleStepFragment"
    android:background="@color/white_primary">

    <LinearLayout
        android:id="@+id/lin_layout_steps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/exoplayer_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/iv_step"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:visibility="gone"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/tv_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/white_primary"
            tools:text="Single step"/>

    </LinearLayout>

</FrameLayout>